Fixed a parenthesis problem

--- a/Code Algo quantique.ipynb
+++ b/Code Algo quantique.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -146,11 +146,21 @@
     "    H_spin = H_anderson.to_spin(method = \"jordan-wigner\")#Fermion to Qubit\n",
     "    return H_spin, H_spin.get_matrix()\n",
     "\n",
-    "AndersonHamiltonian, matrix = hamiltonian(1, 4, 2,4, 3, [[3]], [0]) \n",
+    "AndersonHamiltonian, matrix = hamiltonian(1, 4, 2,4, 3, [[3]], [4]) \n",
     "for term in (AndersonHamiltonian.terms) :\n",
     "    print(term.op , term.qbits)\n",
     "\n",
     "print(AndersonHamiltonian.terms[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qlmA = qat.fermion.hamiltonians.make_anderson_model(2, 4, [[3]], 4)\n",
+    "print(AndersonHamiltonian == qlmA)"
    ]
   },
   {
@@ -186,7 +196,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Testing for different durations to gauge the impact of duration :"
+    "Testing for different durations to gauge the impact of duration on the energy calculated :"
    ]
   },
   {
@@ -234,7 +244,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Avant toute chose, il faut implémenter une façon de calculer une exponentielle complexe d'un mot de Pauli (Pauli string), pour cela on met en place des transformations qui permettent à se ramener à des mots de Pauli uniquement avec des matrices Zi, dont l'exponentielle complexe peut s'implémenter grâce à des CNOT et des rotations d'axe Z, on a en particulier :\n",
+    "Avant toute chose, il faut implémenter une façon de calculer une exponentielle complexe d'une chaîne de Pauli (Pauli string), pour cela on met en place des transformations qui permettent à se ramener à des mots de Pauli uniquement avec des matrices Zi, dont l'exponentielle complexe peut s'implémenter grâce à des CNOT et des rotations d'axe Z, on a en particulier :\n",
     "$$R_{Yq}\\left(\\frac{\\pi}{2}\\right) Z_q R_{Yq}^\\dagger\\left(\\frac{\\pi}{2}\\right) = X_q$$\n",
     "$$\n",
     "R_{Yq}\\left(\\frac{\\pi}{2}\\right) e^{-i\\theta Z_0 \\dots Z_q \\dots Z_N} R_{Yq}^\\dagger\\left(\\frac{\\pi}{2}\\right) =\n",
@@ -253,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +331,7 @@
     "            after.append((RY(- np.pi / 2),qubits[nq[i]]))\n",
     "        elif pauliString[i] == \"Y\" :\n",
     "            before.append((RX(-np.pi / 2),qubits[nq[i]]))\n",
-    "            after.append(RX(np.pi / 2),(qubits[nq[i]]))\n",
+    "            after.append((RX(np.pi / 2),qubits[nq[i]]))\n",
     "    \n",
     "    if pauliString[n - 1] == \"X\" :\n",
     "        before.append((RY(np.pi / 2), qubits[nq[n - 1]]))\n",
