Fixed some problems

--- a/Code Algo quantique.ipynb
+++ b/Code Algo quantique.ipynb
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,14 +448,14 @@
     "    qubitsY = progY.qalloc(n_qubits)\n",
     "    \n",
     "    if spin == \"+\" :\n",
-    "        progX.apply(X, qubitsX[2*n_impurity - 1])\n",
-    "        progY.apply(RY(-np.pi), qubitsY[2*n_impurity - 1]) #+iY\n",
-    "        for wire in range(2 * n_impurity - 1) : \n",
+    "        progX.apply(X, qubitsX[2*n_impurity])\n",
+    "        progY.apply(RY(-np.pi), qubitsY[2*n_impurity]) #+iY\n",
+    "        for wire in range(2 * n_impurity) : \n",
     "            progX.apply(Z, qubitsX[wire])\n",
     "            progY.apply(Z, qubitsY[wire])\n",
     "    else : #spin down\n",
-    "        progX.apply(X, qubitsX[2*n_impurity])\n",
-    "        progY.apply(RY(-np.pi), qubitsY[2*n_impurity])\n",
+    "        progX.apply(X, qubitsX[2*n_impurity + 1])\n",
+    "        progY.apply(RY(-np.pi), qubitsY[2*n_impurity + 1])\n",
     "        for wire in range(2 * n_impurity) :\n",
     "            progX.apply(Z, qubitsX[wire])\n",
     "            progY.apply(Z, qubitsY[wire])\n",
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,14 +479,14 @@
     "    qubitsY = progY.qalloc(n_qubits)\n",
     "    \n",
     "    if spin == \"+\" :\n",
-    "        progX.apply(X, qubitsX[2*n_impurity - 1])\n",
-    "        progY.apply(RY(np.pi), qubitsY[2*n_impurity - 1]) #-iY\n",
-    "        for wire in range(2 * n_impurity - 1) : \n",
+    "        progX.apply(X, qubitsX[2*n_impurity])\n",
+    "        progY.apply(RY(np.pi), qubitsY[2*n_impurity]) #-iY\n",
+    "        for wire in range(2 * n_impurity) : \n",
     "            progX.apply(Z, qubitsX[wire])\n",
     "            progY.apply(Z, qubitsY[wire])\n",
     "    else :\n",
-    "        progX.apply(X, qubitsX[2*n_impurity])\n",
-    "        progY.apply(RY(np.pi), qubitsY[2*n_impurity])\n",
+    "        progX.apply(X, qubitsX[2*n_impurity + 1])\n",
+    "        progY.apply(RY(np.pi), qubitsY[2*n_impurity + 1])\n",
     "        for wire in range(2 * n_impurity) :\n",
     "            progX.apply(Z, qubitsX[wire])\n",
     "            progY.apply(Z, qubitsY[wire])\n",
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +534,9 @@
     "    else :\n",
     "        circuit = circuit + circuitY_cdag\n",
     "\n",
-    "    return circuit\n"
+    "    return circuit\n",
+    "\n",
+    "circuitGreen(4, 0, \"+\", 0, \"-\", AndersonHamiltonian, 3, 6, [\"X\",\"Y\"]).display()\n"
    ]
   },
   {
